implement getProduct
